Update with LinkedList